# amsterdam-house-price-prediction

./: .gitignore  README.md  main.py  pyproject.toml
data/: cleaned.csv
models/: decisiontree_depth_5.joblib  linearregression.joblib  randomforest_n_50.joblib  ridge_alpha_1.0.joblib
notebooks/: eda.ipynb  models_and_experiments.ipynb
notebooks/.ipynb_checkpoints/: evaluation-checkpoint.ipynb  models_and_experiments-checkpoint.ipynb
src/: evaluate.py  features.py  preprocessing.py  train.py  utils.py
